# tmplot

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  tmplot_dist.rst  tmplot_hlp.rst  tmplot_metrics.rst  tmplot_report.rst  tmplot_stab.rst  tmplot_vis.rst  tutorial.ipynb
src/tmplot/: __init__.py  _distance.py  _helpers.py  _metrics.py  _report.py  _stability.py  _vis.py
tests/: test_tmplot.py
tests/models/: gensimLDA.model
